[package]
name = "delete_face"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustface = "0.1.7"
imagesize = "0.11"
rayon = "1.7"
image = "0.23"
imageproc = "0.22.0"
criterion = "0.3"
byteorder = "1.2.6"
text_io = "0.1.12"